# Editable-Table-Delegate

./: .gitmodules  CMakeLists.txt  README.md
include/StyledWidgets/: StylePropDefines.h  StyledTable.h
include/TableDelegate/: TableDelegate.h
src/StyledWidgets/: StyledTable.cpp
src/TableDelegate/: TableDelegate.cpp
